--- a/channel.html
+++ b/channel.html
@@ -17,8 +17,8 @@
                     <input type="text" placeholder="Поиск..." class="header_search">
                     <input type="button" value="Найти" class="header_search_btn">
                 </form>
-                <form>
-                    <input type="button" value="Войти" class="header_login">
+                <form action="./login.html">
+                    <button class="header_login">Войти</button>
                 </form>
             
         </header>
